<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.Weather.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:theme="@style/Theme.Weather.AppWidgetContainer">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/appwidget_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="35sp"
            />
        <TextView
            android:id="@+id/appwidget_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/date"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/appwidget_rightside"
        android:layout_width="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/appwidget_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/region2"
            />
        <TextView
            android:id="@+id/appwidget_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature2"
            />
        <TextView
            android:id="@+id/appwidget_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather2"
            />
    </LinearLayout>
</LinearLayout>